--- a/tables/randoopvsBuilders.tex
+++ b/tables/randoopvsBuilders.tex
@@ -1,37 +1,35 @@
-\begin{table}[H]
-\scriptsize
-\centering
+  \begin{table}[H]
+  \scriptsize
+  \centering
   \begin{tabular}{ c  r  |r|r|r|r  }
-  \toprule
-  \textbf{GTime} & \textbf{Herramienta} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
-  \midrule
+    \toprule
+    \textbf{GTime} & \textbf{Herramienta} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+    \midrule
   30	&	Randoop	 &  2534 & 8   & 75 	& 92   \\
   & R-Serialize-API	&  309162  &  10  & 85 	& 95   \\
-  & R-Builders-MGO	&  680442  &   34 & 78 	& 95   \\
+  & R-Builders-MGO	&  680442  &   34 & 85 	& 95   \\
   \cline{2-6}
   60	&	Randoop	 &  4934  & 12   & 79 	& 100    \\
-  & R-Serialize-API	&  586432 & 17   &  84	&   100 \\
-  & R-Builders-MGO	&   1044764 &  24  &  78	&  100  \\
+  & R-Serialize-API	&  586432 & 17   &  85	&   100 \\
+  & R-Builders-MGO	&   1044764 &  24  &  85	&  100  \\
   \cline{2-6}
   180	&	Randoop	 &   14614 & 32  &  87	& 109    \\
   & R-Serialize-API	&  1604470  &  43  & 85  	& 109   \\
-  & R-Builders-MGO	&  1957998  & 112   & 78 	&  109  \\
-\cline{2-6}
-  5	&	BEAPI	 &  2212  & 2 & 85 	&   109 \\
-\midrule
-\end{tabular}
-\caption{Comparativa de diferentes tecnicas en HashSet}
-\label{tab:hashSetTools_Builders}
-\end{table}
+  & R-Builders-MGO	&  1957998  & 112   & 85 	&  109  \\
+  \midrule
+  \end{tabular}
+  \caption{Comparativa de diferentes tecnicas en HashSet}
+  \label{tab:hashSetTools_beapi}
+  \end{table}
 
 
 \begin{table}[H]
 \scriptsize
-\centering
+  \centering
   \begin{tabular}{ c  r  |r|r|r|r  }
-  \toprule
-  \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
-  \midrule
+    \toprule
+    \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+    \midrule
 
 30	&	Randoop	 &  3546  &  9  &  80	&   100 \\
 & R-Serialize-API	&  543298  &  9  &  	114&   99 \\
@@ -44,13 +42,10 @@
 180	&	Randoop	 &  20138  &  41  & 105 	& TO   \\
 & R-Serialize-API	&  2156028  & 36   & 125 	&   109 \\
 & R-Builders-MGO	& 2311834  &  45  & 154 	&  111  \\
-\cline{2-6}
-5	&	BEAPI	 &  2758  &  1  & 154 	& 116   \\ 
-
 \midrule
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en TreeSet}
-\label{tab:treeSetTools_Builders}
+\label{tab:treeSetTools_beapi}
 \end{table}
 
 \begin{table}[H]
@@ -58,7 +53,7 @@
 \centering
   \begin{tabular}{ c  r  |r|r|r|r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime} & \textbf{Tool} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &   28970 &   7  & 31 	&  58  \\
 & R-Serialize-API	&   222152 & 3   &  120 	& 100    \\
@@ -71,13 +66,10 @@
 180	&	Randoop	 &  19240  &  27  & 46 	& 82   \\
 & R-Serialize-API	&  789894  & 6   &  	120 &  100  \\
 & R-Builders-MGO	&  1053990  & 8   &  162	& 156\\
-\cline{2-6}
-30	&	BEAPI	 &  514140  &  18  & 194 	&  165  \\ 
 \midrule
-
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en TreeMap}
-\label{tab:treeMapTools_Builders}
+\label{tab:treeMapTools_beapi}
 \end{table}
 
 \begin{table}[H]
@@ -85,7 +77,7 @@
 \centering
   \begin{tabular}{ c  r  |r|r|r|r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime} & \textbf{Tool} & \textbf{Objectos}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &  2612  &   9 & 47 	&  49  \\
 & R-Serialize-API	&  317927  &   14 &  49	&   56 \\
@@ -99,11 +91,9 @@
 & R-Serialize-API	&   1639747 &  58  &  49	&  58  \\
 & R-Builders-MGO	&  4145115  &  99  & 49 	&58   \\
 \midrule
-& BEAPI	&  270599 & 6  & 49 	&  58  \\
-
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en LinkedList}
-\label{tab:linkedListTools_Builders}
+\label{tab:linkedListTools_beapi}
 \end{table}
 
 \begin{table}[H]
@@ -111,7 +101,7 @@
 \centering
   \begin{tabular}{ c  r  |r|r|r|r  }
   \toprule
-  \textbf{GTime} & \textbf{Tool} &  \textbf{Test} & \textbf{T(Seg)} & \textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \textbf{GTime} & \textbf{Tool} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 30	&	Randoop	 &  86  &    &  48	&  66  \\
 & R-Serialize-API	&  466587  & 28   &  108	& 120   \\
@@ -125,8 +115,7 @@
 & R-Serialize-API	&  2419578  & 174   & 107 	&  120  \\
 & R-Builders-MGO	&  2498337  &  201  &  122	&  127  \\
 \midrule
-& BEAPI	& 3704373  & 89  & 125 	&  131  \\ 
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en HashMap}
-\label{tab:hashMapTools_Builders}
+\label{tab:hashMapTools_beapi}
 \end{table}
