--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -60,7 +60,7 @@
 \hline
 \end{tabular}
 
-\caption{Precisión de los algoritmos para encontrar un subconjunto métodos
+\caption{Precisión de los algoritmos para encontrar un subconjunto de métodos
 generadores de objetos}
 \label{tab:efectividad}
 \end{table}
