--- a/tables/groundTruth.tex
+++ b/tables/groundTruth.tex
@@ -80,6 +80,6 @@
 
 \end{tabular}%
 }
-\caption{Ground truth de métodos generadores por clase y la cantidad de métodos en la API de cada clase.}
+\caption{Ejemplos de métodos generadores minimales por clase y la cantidad de métodos en la API de cada clase.}
 \label{tab:groundTruth}
 \end{table}
